--- a/pages/article/form/form.wxml
+++ b/pages/article/form/form.wxml
@@ -13,6 +13,11 @@
   </view>
 
   <view class="form-group">
+    <view class="label">描述</view>
+    <textarea class="textarea description" placeholder="请输入简短描述" value="{{formData.description}}" bindinput="onInput" data-field="description" maxlength="200" style="height: 150rpx;"></textarea>
+  </view>
+
+  <view class="form-group">
     <view class="label">文章类型</view>
     <picker bindchange="onTypeChange" value="{{formData.articleType - 1}}" range="{{articleTypes}}">
       <view class="input picker">
@@ -22,28 +27,40 @@
   </view>
 
   <view class="form-group">
+    <view class="label">发布类型</view>
+    <picker bindchange="onPublishTypeChange" value="{{formData.publishType}}" range="{{publishTypes}}">
+      <view class="input picker">
+        {{publishTypes[formData.publishType]}}
+      </view>
+    </picker>
+  </view>
+
+  <view class="form-group">
+    <view class="label">发布者</view>
+    <!-- 当发布类型为校友会时，显示选择器 -->
+    <picker wx:if="{{formData.publishType === 1}}" mode="selector" range="{{publisherList}}" range-key="name" value="{{selectedPublisherIndex}}" bindchange="onPublisherChange">
+      <view class="input picker publisher-picker">
+        <view class="publisher-content" wx:if="{{selectedPublisherIndex >= 0 && publisherList[selectedPublisherIndex]}}">
+          <view class="publisher-avatar-wrapper">
+            <image class="publisher-avatar" src="{{publisherList[selectedPublisherIndex].avatar}}" mode="aspectFill" wx:if="{{publisherList[selectedPublisherIndex].avatar}}"></image>
+          </view>
+          <text class="publisher-name">{{publisherList[selectedPublisherIndex].name}}</text>
+        </view>
+        <text class="publisher-placeholder" wx:else>请选择发布者</text>
+      </view>
+    </picker>
+    <!-- 其他发布类型，显示输入框 -->
+    <input wx:else class="input" placeholder="请输入发布者名称" value="{{formData.publishUsername}}" bindinput="onInput" data-field="publishUsername" />
+  </view>
+
+  <view class="form-group">
     <view class="label">文章链接</view>
     <input class="input" placeholder="请输入链接（类型为链接时必填）" value="{{formData.articleLink}}" bindinput="onInput" data-field="articleLink" />
-  </view>
-
-  <view class="form-group">
-    <view class="label">描述</view>
-    <textarea class="textarea description" placeholder="请输入简短描述" value="{{formData.description}}" bindinput="onInput" data-field="description" maxlength="200" style="height: 150rpx;"></textarea>
-  </view>
-
-  <view class="form-group">
-    <view class="label">详细内容</view>
-    <textarea class="textarea" placeholder="请输入内容" value="{{formData.content}}" bindinput="onInput" data-field="content" maxlength="-1"></textarea>
   </view>
 
   <view class="form-group row">
     <view class="label">是否启用</view>
     <switch checked="{{formData.articleStatus === 1}}" bindchange="onSwitchChange" data-field="articleStatus" color="#4bcce9" />
-  </view>
-
-  <view class="form-group row">
-    <view class="label">是否置顶</view>
-    <switch checked="{{formData.isTop}}" bindchange="onSwitchChange" data-field="isTop" color="#4bcce9" />
   </view>
 
   <view class="btn-area">
