--- a/pages/article/detail/detail.wxss
+++ b/pages/article/detail/detail.wxss
@@ -5,9 +5,46 @@
 }
 
 .article-header {
-  margin-bottom: 40rpx;
-  border-bottom: 1rpx solid #f5f5f5;
-  padding-bottom: 30rpx;
+  margin-bottom: 30rpx;
+}
+
+.user-info-wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 20rpx;
+}
+
+.user-avatar {
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  background: #f0f0f0;
+  flex-shrink: 0;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  justify-content: space-between;
+}
+
+.user-name {
+  font-size: 28rpx;
+  font-weight: 600;
+  color: #333;
+  flex-shrink: 0;
+}
+
+.publish-time {
+  font-size: 24rpx;
+  color: #999;
+  flex-shrink: 0;
+}
+
+.article-title-wrapper {
+  margin-bottom: 30rpx;
 }
 
 .article-title {
@@ -15,26 +52,42 @@
   font-weight: bold;
   color: #333;
   line-height: 1.4;
-  margin-bottom: 20rpx;
 }
 
-.article-meta {
-  font-size: 26rpx;
-  color: #999;
-  display: flex;
-  align-items: center;
+.article-cover-wrapper {
+  margin-bottom: 30rpx;
+  border-radius: 12rpx;
+  overflow: hidden;
 }
 
-.article-author {
-  margin-left: 20rpx;
-  color: #4e6ef2;
+.article-cover {
+  width: 100%;
+  display: block;
 }
 
 .article-content {
   font-size: 32rpx;
   line-height: 1.8;
   color: #333;
-  padding-bottom: 60rpx;
+  margin-bottom: 30rpx;
+}
+
+.article-link-wrapper {
+  margin-top: 30rpx;
+  padding: 20rpx;
+  background: #f5f5f5;
+  border-radius: 8rpx;
+  font-size: 28rpx;
+}
+
+.article-link-label {
+  color: #666;
+  margin-right: 10rpx;
+}
+
+.article-link {
+  color: #4e6ef2;
+  word-break: break-all;
 }
 
 .loading-state, .error-state {
