--- a/pages/profile/edit/edit.wxml
+++ b/pages/profile/edit/edit.wxml
@@ -15,11 +15,21 @@
       <view class="section-title">基本信息</view>
       <view class="form-item">
         <view class="label">昵称</view>
-        <input class="input" placeholder="请输入昵称" value="{{form.nickname}}" data-field="nickname" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入昵称" value="{{form.nickname}}" data-field="nickname" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'nickname'}}" data-field="nickname" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">真实姓名</view>
-        <input class="input" placeholder="请输入真实姓名" value="{{form.name}}" data-field="name" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入真实姓名" value="{{form.name}}" data-field="name" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'name'}}" data-field="name" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">性别</view>
@@ -35,7 +45,12 @@
       </view>
       <view class="form-item">
         <view class="label">手机号</view>
-        <input class="input" type="number" maxlength="11" placeholder="用于接收活动通知" value="{{form.phone}}" data-field="phone" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" type="number" maxlength="11" placeholder="用于接收活动通知" value="{{form.phone}}" data-field="phone" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'phone'}}" data-field="phone" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">星座</view>
@@ -45,19 +60,39 @@
       </view>
       <view class="form-item">
         <view class="label">个性签名</view>
-        <input class="input" placeholder="请输入个性签名" value="{{form.signature}}" data-field="signature" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入个性签名" value="{{form.signature}}" data-field="signature" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'signature'}}" data-field="signature" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">微信号</view>
-        <input class="input" placeholder="请输入微信号" value="{{form.wxNum}}" data-field="wxNum" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入微信号" value="{{form.wxNum}}" data-field="wxNum" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'wxNum'}}" data-field="wxNum" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">QQ号</view>
-        <input class="input" type="number" placeholder="请输入QQ号" value="{{form.qqNum}}" data-field="qqNum" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" type="number" placeholder="请输入QQ号" value="{{form.qqNum}}" data-field="qqNum" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'qqNum'}}" data-field="qqNum" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">邮箱</view>
-        <input class="input" type="text" placeholder="请输入常用邮箱" value="{{form.email}}" data-field="email" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" type="text" placeholder="请输入常用邮箱" value="{{form.email}}" data-field="email" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'email'}}" data-field="email" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
     </view>
 
@@ -65,31 +100,66 @@
       <view class="section-title">位置信息</view>
       <view class="form-item">
         <view class="label">籍贯</view>
-        <input class="input" placeholder="请输入籍贯" value="{{form.originProvince}}" data-field="originProvince" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入籍贯" value="{{form.originProvince}}" data-field="originProvince" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'originProvince'}}" data-field="originProvince" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">当前所在洲</view>
-        <input class="input" placeholder="请输入所在洲" value="{{form.curContinent}}" data-field="curContinent" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入所在洲" value="{{form.curContinent}}" data-field="curContinent" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'curContinent'}}" data-field="curContinent" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">当前所在国</view>
-        <input class="input" placeholder="请输入所在国" value="{{form.curCountry}}" data-field="curCountry" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入所在国" value="{{form.curCountry}}" data-field="curCountry" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'curCountry'}}" data-field="curCountry" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">当前所在省市</view>
-        <input class="input" placeholder="请输入所在省市" value="{{form.curProvince}}" data-field="curProvince" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入所在省市" value="{{form.curProvince}}" data-field="curProvince" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'curProvince'}}" data-field="curProvince" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">当前所在市区</view>
-        <input class="input" placeholder="请输入所在市区" value="{{form.curCity}}" data-field="curCity" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入所在市区" value="{{form.curCity}}" data-field="curCity" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'curCity'}}" data-field="curCity" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">当前所在村/区</view>
-        <input class="input" placeholder="请输入所在村/区" value="{{form.curCounty}}" data-field="curCounty" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入所在村/区" value="{{form.curCounty}}" data-field="curCounty" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'curCounty'}}" data-field="curCounty" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
       <view class="form-item">
         <view class="label">详细地址</view>
-        <input class="input" placeholder="请输入详细地址" value="{{form.address}}" data-field="address" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入详细地址" value="{{form.address}}" data-field="address" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'address'}}" data-field="address" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
     </view>
 
@@ -104,6 +174,11 @@
             <text class="delete-btn" bindtap="removeEducation" data-index="{{eduIndex}}">删除</text>
           </view>
           
+          <!-- 确定按钮（只在编辑该教育经历时显示） -->
+          <view class="education-save-btn" wx:if="{{editingEducationIndex === eduIndex}}" data-index="{{eduIndex}}" catchtap="handleSaveEducation">
+            <text class="education-save-text">确定</text>
+          </view>
+          
           <view class="form-item school-select-item">
             <view class="label">学校</view>
             <view class="school-input-wrapper">
@@ -114,6 +189,7 @@
                 data-index="{{eduIndex}}"
                 bindinput="searchSchool"
                 bindfocus="onSchoolFocus"
+                bindblur="handleEducationBlur"
               />
               <!-- 学校下拉列表 -->
               <view wx:if="{{showSchoolDropdown[eduIndex]}}" class="school-dropdown">
@@ -143,27 +219,27 @@
 
           <view class="form-item">
             <view class="label">入学年份</view>
-            <input class="input" type="number" placeholder="例如：2018" value="{{form.educationList[eduIndex].enrollmentYear || ''}}" data-index="{{eduIndex}}" data-field="enrollmentYear" bindinput="handleEducationYearInput" />
+            <input class="input" type="number" placeholder="例如：2018" value="{{form.educationList[eduIndex].enrollmentYear || ''}}" data-index="{{eduIndex}}" data-field="enrollmentYear" bindinput="handleEducationYearInput" bindfocus="handleEducationFocus" bindblur="handleEducationBlur" />
           </view>
 
           <view class="form-item">
             <view class="label">毕业年份</view>
-            <input class="input" type="number" placeholder="例如：2022" value="{{form.educationList[eduIndex].graduationYear || ''}}" data-index="{{eduIndex}}" data-field="graduationYear" bindinput="handleEducationYearInput" />
+            <input class="input" type="number" placeholder="例如：2022" value="{{form.educationList[eduIndex].graduationYear || ''}}" data-index="{{eduIndex}}" data-field="graduationYear" bindinput="handleEducationYearInput" bindfocus="handleEducationFocus" bindblur="handleEducationBlur" />
           </view>
 
           <view class="form-item">
             <view class="label">院系</view>
-            <input class="input" placeholder="请输入院系" value="{{form.educationList[eduIndex].department || ''}}" data-index="{{eduIndex}}" data-field="department" bindinput="handleEducationInput" />
+            <input class="input" placeholder="请输入院系" value="{{form.educationList[eduIndex].department || ''}}" data-index="{{eduIndex}}" data-field="department" bindinput="handleEducationInput" bindfocus="handleEducationFocus" bindblur="handleEducationBlur" />
           </view>
 
           <view class="form-item">
             <view class="label">专业</view>
-            <input class="input" placeholder="请输入专业" value="{{form.educationList[eduIndex].major || ''}}" data-index="{{eduIndex}}" data-field="major" bindinput="handleEducationInput" />
+            <input class="input" placeholder="请输入专业" value="{{form.educationList[eduIndex].major || ''}}" data-index="{{eduIndex}}" data-field="major" bindinput="handleEducationInput" bindfocus="handleEducationFocus" bindblur="handleEducationBlur" />
           </view>
 
           <view class="form-item">
             <view class="label">班级</view>
-            <input class="input" placeholder="请输入班级" value="{{form.educationList[eduIndex].className || ''}}" data-index="{{eduIndex}}" data-field="className" bindinput="handleEducationInput" />
+            <input class="input" placeholder="请输入班级" value="{{form.educationList[eduIndex].className || ''}}" data-index="{{eduIndex}}" data-field="className" bindinput="handleEducationInput" bindfocus="handleEducationFocus" bindblur="handleEducationBlur" />
           </view>
 
           <view class="form-item">
@@ -191,25 +267,36 @@
       </view>
       <view class="form-item">
         <view class="label">证件号</view>
-        <input class="input" placeholder="请输入证件号" value="{{form.identifyCode}}" data-field="identifyCode" bindinput="handleInput" />
+        <view class="input-wrapper">
+          <input class="input" placeholder="请输入证件号" value="{{form.identifyCode}}" data-field="identifyCode" bindinput="handleInput" bindfocus="handleInputFocus" bindblur="handleInputBlur" />
+          <view class="save-btn" wx:if="{{editingField === 'identifyCode'}}" data-field="identifyCode" catchtap="handleSaveField">
+            <text class="save-icon">✓</text>
+          </view>
+        </view>
       </view>
     </view>
 
     <view class="section-card card">
       <view class="section-title">个人简介</view>
-      <textarea
-        class="textarea"
-        maxlength="1000"
-        placeholder="介绍一下你的经历、擅长领域或兴趣爱好，便于校友联系你。"
-        value="{{form.description}}"
-        data-field="description"
-        bindinput="handleTextarea"
-      ></textarea>
-      <view class="textarea-count">{{form.description.length}}/1000</view>
-    </view>
-
-    <view class="section-card card">
-      <view class="section-title">其他信息</view>
+      <view class="textarea-wrapper">
+        <view class="textarea-container">
+          <textarea
+            class="textarea"
+            maxlength="1000"
+            placeholder="介绍一下你的经历、擅长领域或兴趣爱好，便于校友联系你。"
+            value="{{form.description}}"
+            data-field="description"
+            bindinput="handleTextarea"
+            bindfocus="handleDescriptionFocus"
+            bindblur="handleDescriptionBlur"
+          ></textarea>
+          <!-- 确定按钮（只在编辑时显示） -->
+          <view class="description-save-btn" wx:if="{{editingDescription}}" catchtap="handleSaveDescription">
+            <text class="description-save-text">确定</text>
+          </view>
+        </view>
+        <view class="textarea-count">{{form.description.length}}/1000</view>
+      </view>
     </view>
   </scroll-view>
 
