--- a/pages/discover/discover.wxss
+++ b/pages/discover/discover.wxss
@@ -666,11 +666,20 @@
 
 /* 地图视图 */
 .map-view {
-  width: 100%;
-  height: calc(100vh - 300rpx);
+  flex: 1;
+  height: 0;
+  margin-top: calc(env(safe-area-inset-top) + 435rpx + 120rpx + 80rpx);
+  position: relative;
+  z-index: 20;
+  background-color: #f5f5f5;
 }
 
 .discover-map {
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
