--- a/pages/discover/discover.wxss
+++ b/pages/discover/discover.wxss
@@ -507,9 +507,19 @@
   color: #666;
 }
 
+.card-signature {
+  font-size: 24rpx;
+  color: #999;
+  margin-top: 4rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .card-association {
   font-size: 24rpx;
   color: #999;
+  margin-top: 4rpx;
 }
 
 .card-tag {
